Bruk patch for å oppdatere flere oppgaver samtidig